--- a/index.html
+++ b/index.html
@@ -11,16 +11,16 @@
     <title>Clean Blog - Start Bootstrap Theme</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="orphan/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom fonts for this template -->
-    <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href="orphan/vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href='https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
 
     <!-- Custom styles for this template -->
-    <link href="css/clean-blog.min.css" rel="stylesheet">
-    <script src="js/echarts.js"></script>
+    <link href="orphan/css/clean-blog.min.css" rel="stylesheet">
+    <script src="orphan/js/echarts.js"></script>
     <style>
         #number {
             margin-top: 5em;
@@ -62,7 +62,7 @@
     </nav>
 
     <!-- Page Header -->
-    <header class="masthead" style="background-image: url('img/2.jpg')">
+    <header class="masthead" style="background-image: url('orphan/img/2.jpg')">
         <div class="container">
             <div class="row">
                 <div class="col-lg-10 col-md-12 mx-auto">
@@ -93,7 +93,7 @@
                     <p>中国从开放国际收养以来，目前已与美国、英国、加拿大等17个国家建立了涉外收养合作关系。而在这些国家中，美国家庭收养占据了在中国登记的外国公民收养的大多数。与此同时，中国目前也是美国跨国收养最大的来源国，美国2016年的海外收养数据显示，来自中国的孤儿人数占总人数的41.5%。</p>
 
 
-                    <img class="img-fluid" src="img/top.png" alt="">
+                    <img class="img-fluid" src="orphan/img/top.png" alt="">
 
 
 
@@ -104,7 +104,7 @@
                     <p> 而这也催生了一批美国收养机构，中国儿童福利和收养中心官网显示美国有51家主要针对中国的收养机构。在这些机构的官网上，有对收养中国孤儿流程和注意事项的详细介绍。</p>
                     <p>在收养机构的等待儿童和特殊需求名单上，大部分孩子都有不同程度的先天性疾病。由于无力承担高额的治疗费用，婴儿患病是被亲生父母遗弃的重要原因，极少数被遗弃的男孩都是因为残疾或者疾病。而中国与其他国家最大的不同是，当传统观念上的“重男轻女”思想碰上了严格执行的计划生育政策，很多健康的女婴在出生时也成为被遗弃的对象，而这些健康的女婴则一度成为国际上跨国收养的“热门”和“首选”。</p>
                     <p>可追溯的公开数据显示，1999年，被美国收养的女孩比例高达97.9%。到了2016年，被收养的男孩比例已经超过女孩。</p>
-                    <img class="img-fluid" src="img/ratio.png" alt="">
+                    <img class="img-fluid" src="orphan/img/ratio.png" alt="">
                     <p>实际上，不仅仅是男女比，在这十几年间，美国在华收养的整体情况也经历了巨变。</p>
 
                     <h2 class="section-heading">数量骤减背后</h2>
@@ -123,7 +123,7 @@
 
                     <p>申请人减少的同时，跨国收养的审核也更加严格，手续也日渐繁琐，直接导致等待的时间变长。根据美国国家收养委员会的统计，如果收养一个健康的女婴，这一过程至少需要3年。更加严格的审核也带来新的变化。美国国家收养委员会在2009年的一份报告中表示，很多收养人在等待的过程中将目光转向了有特殊医疗需求和年龄较大的孩子，以获得优先权。目前，部分美国收养机构已经关闭了传统的收养通道，只接受针对特殊医疗需求儿童和年龄较大儿童的申请。而1999年和2016年美国在华收养孤儿的年龄分布变化也能说明这个趋势。
                     </p>
-                    <img class="img-fluid" src="img/age.png" alt="">
+                    <img class="img-fluid" src="orphan/img/age.png" alt="">
                     <p> </p>
                     <p>美国国家收养委员会认为如果目前的收养程序得到改善，跨国收养数量应该会有所回升，然而在7月，中国儿童福利与收养中心公布了涉外收养人资格的新要求，提出了更多的限制，美国在华收养孤儿可能会再一次受到影响。</p>
 
@@ -162,13 +162,13 @@
     </footer>
 
     <!-- Bootstrap core JavaScript -->
-    <script src="vendor/jquery/jquery.min.js"></script>
-    <script src="vendor/popper/popper.min.js"></script>
-    <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
+    <script src="orphan/vendor/jquery/jquery.min.js"></script>
+    <script src="orphan/vendor/popper/popper.min.js"></script>
+    <script src="orphan/vendor/bootstrap/js/bootstrap.min.js"></script>
 
     <!-- Custom scripts for this template -->
-    <script src="js/clean-blog.min.js"></script>
-    <script src="js/chart.js"></script>
+    <script src="orphan/js/clean-blog.min.js"></script>
+    <script src="orphan/js/chart.js"></script>
 </body>
 
 </html>
